--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_maps_flutter: ^2.12.3
   mobile_scanner: ^7.0.1
   permission_handler: ^12.0.0+1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -42,5 +43,4 @@ flutter:
   assets:
     - assets/translations/
     - assets/service_account.json
-
 
