--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mobile_scanner: ^7.0.1
   permission_handler: ^12.0.0+1
   path_provider: ^2.1.5
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
