--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   permission_handler: ^12.0.0+1
   path_provider: ^2.1.5
   flutter_local_notifications: ^19.2.1
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  location: ^8.0.1
 
 dev_dependencies:
   flutter_test:
