--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,25 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 
+  web:
+    generate: true
+    image_path: "assets/icon/icon.png"  
+    background_color: "#FFFFFF"        
+    theme_color: "#2196F3"           
+  windows:
+    generate: true
+    image_path: "assets/icon/icon.png" 
+    icon_size: 48 
+  macos:
+    generate: true
+    image_path: "assets/icon/icon.png" 
 
 
 flutter:
@@ -46,5 +65,6 @@ flutter:
   generate: true
   assets:
     - assets/translations/
+    - assets/icon/
     - assets/service_account.json
 
