--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
   location: ^8.0.1
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
