--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -3,6 +3,7 @@
         android:label="Let's Chat"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+        android:requestLegacyExternalStorage="true"
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -31,7 +32,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
@@ -49,6 +49,8 @@
       <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
       <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
       <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+      <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" ignore="ScopedStorage" />
       
 
 </manifest>
